major update, new font, restyle, new experience

--- a/dark.css
+++ b/dark.css
@@ -17,67 +17,19 @@ html {
   /* box-shadow: 20px 13px 30px #0002; */
   box-shadow: none;
 }
-.a4 .content-wrapper .content {
-  border-left: 2px solid #fff2;
-}
 
 hr {
   background-color: #fff2;
 }
 
-.experience-name {
-  color: var(--primary-color);
-  opacity: 0.8;
-}
-
-.education h5 {
-  color: var(--primary-color);
-  opacity: 0.8;
-}
 .experience-name:after,
 .education h5:after {
   display: none;
 }
 
-.ln-svg,
-.gh-svg {
-  fill: #606164;
-}
-.ln-svg:hover {
-  fill: #0b65c2;
-}
-.gh-svg:hover {
-  fill: #bbc4d0;
-}
-.glass {
-  background-color: #8881;
-  /* backdrop-filter: blur(20px); */
-  box-shadow: 15px 15px 40px #0003;
-  box-shadow: none;
-}
-.clipboard-message {
-  color: #999;
-}
-
-.sticker {
-  background-color: var(--primary-color);
-}
-.phone,
-.email {
-  color: #222;
-}
-
 .avatar {
   /* box-shadow: 10px 5px 14px #0004; */
   box-shadow: 5px 5px 10px #0002;
-}
-
-.profession {
-  color: #000;
-  background-color: var(--primary-color);
-}
-.profession:after {
-  background-color: #fff2;
 }
 
 p {
@@ -88,7 +40,7 @@ li {
   color: #bbb;
 }
 li strong {
-  font-family: 'ProductSans Bold';
+  font-family: "ProductSans Bold";
   color: #ddd;
 }
 a,
@@ -106,10 +58,6 @@ a * {
 #download:hover svg {
   stroke: var(--primary-color);
 }
-#download:hover span {
-  /* color: var(--primary-color); */
-}
-
 #download:hover svg,
 #download:hover span {
   filter: brightness(200%);
