--- a/style.css
+++ b/style.css
@@ -1,16 +1,49 @@
+@font-face {
+  font-family: "Roobert Bold";
+  src: url(./fonts/roobert/Roobert-Bold.otf) format("opentype");
+}
+
+@font-face {
+  font-family: "Roobert Heavy";
+  src: url(./fonts/roobert/Roobert-Heavy.otf) format("opentype");
+}
+
+@font-face {
+  font-family: "Roobert Light";
+  src: url(./fonts/roobert/Roobert-Light.otf) format("opentype");
+}
+
+@font-face {
+  font-family: "Roobert Medium";
+  src: url(./fonts/roobert/Roobert-Medium.otf) format("opentype");
+}
+
+@font-face {
+  font-family: "Roobert Regular";
+  src: url(./fonts/roobert/Roobert-Regular.otf) format("opentype");
+}
+
+@font-face {
+  font-family: "Roobert SemiBold";
+  src: url(./fonts/roobert/Roobert-SemiBold.otf) format("opentype");
+}
+
 :root {
   --primary-color: #d4ddef;
   --primary-color: #b9dcff;
+  --primary-color: #2427ab;
+  --text-color: #4f4f4f;
 }
 
 * {
   padding: 0;
   margin: 0;
-  color: #111;
+  /* color: var(--text-color); */
   /* border: 1px solid orangered; */
-
-  font-family: 'Helvetica Neue', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  font-family: "Roobert Regular", sans-serif;
 }
+
 html {
   background-color: #e6e7e9;
   /* background: radial-gradient(black 15%, transparent 16%) 0 0,
@@ -40,6 +73,7 @@ html {
   height: 100vh;
   width: 100%;
 }
+
 .a4-grid {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -47,10 +81,12 @@ html {
   align-items: center;
   height: 100vh;
 }
+
 .left {
   display: block;
   min-width: 6vw;
 }
+
 .right {
   display: block;
   /* min-width: 10vw; */
@@ -69,87 +105,22 @@ html {
   position: relative;
 }
 
-.ln-svg,
-.gh-svg {
-  fill: #777;
-  cursor: pointer;
-}
-.ln-svg:hover {
-  fill: #0b65c2;
-}
-.gh-svg:hover {
-  fill: #2e3741;
-}
-.glass {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-end;
-  gap: 2rem;
-  padding: 14rem 0;
-  box-sizing: border-box;
-  /* ///// */
-  z-index: 200;
-  position: absolute;
-  height: 81rem;
-  width: 7rem;
-  left: -80px;
-  top: 5rem;
-  background-color: #ccc1;
-  backdrop-filter: blur(18px);
-  -webkit-backdrop-filter: blur(18px);
-  box-shadow: 10px 10px 25px #0002;
-}
-.clipboard-message {
-  font-family: 'Helvetica Neue', sans-serif;
-  font-weight: bold;
-  position: absolute;
-  bottom: -75px;
-  left: 60px;
-  /* height: 10px; */
-  /* width: 10px; */
-  /* background-color: red; */
-  color: #777;
-  font-size: 1.2rem;
-  transition: 2s;
-}
 .hidden {
   display: none;
 }
 
-.sticker {
-  z-index: 200;
-  position: absolute;
-  height: 95px;
-  /* width: 195px; */
-  /* top: 70px; */
-  bottom: -45px;
-  left: -50px;
-  border: 1px solid #0006;
-  border-radius: 4px;
-  background-color: var(--primary-color);
-  backdrop-filter: blur(3px);
-  -webkit-backdrop-filter: blur(3px);
-  box-shadow: 10px 5px 7px #0001;
-  /*  */
-  box-sizing: border-box;
-  line-height: 30px;
-  padding: 35px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
-}
 li a:hover {
   outline: none;
   border: 1px solid #0006;
 }
+
 li a:active span,
 li a:active {
   /* opacity: 0.9; */
   opacity: 0.9;
   /* color: #555; */
 }
+
 li a,
 li a:active {
   box-shadow: none;
@@ -163,32 +134,6 @@ li a:active {
   cursor: pointer;
 }
 
-.phone,
-.email {
-  cursor: pointer;
-  color: #222;
-
-  font-family: 'Helvetica Neue', sans-serif;
-  font-weight: bold;
-  font-size: 1.2rem;
-  flex: 1;
-  opacity: 0.8;
-}
-.phone:hover,
-.email:hover {
-  opacity: 1;
-}
-.phone:active,
-.email:active {
-  opacity: 0.6;
-}
-/* .phone {
-  flex: 1;
-}
-.email {
-  flex: 1;
-} */
-
 header {
   display: flex;
   justify-content: space-between;
@@ -199,6 +144,7 @@ header {
 .full-name {
   flex: 1 1 1;
 }
+
 .avatar {
   margin-right: 1rem;
   margin-bottom: 0rem;
@@ -209,45 +155,24 @@ header {
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
   box-shadow: 10px 5px 14px #0004;
-
   /* background-image: url('./img/avatarShot2.png'); */
-  background: url('./img/avatarShot2.png');
+  background: url("./img/avatarShot2.png");
   /* background-repeat: no-repeat; */
   background-size: 103%;
 }
 
 .full-name {
-  font-family: 'Rubik', Sans-Serif;
-
-  font-family: 'Helvetica Neue', sans-serif;
+  font-family: "Roobert Medium", sans-serif;
   font-weight: bold;
 
+  color: var(--primary-color);
   margin-left: 20px;
   margin-bottom: 14px;
   font-weight: 300;
-  font-size: 2.8rem;
+  font-size: 29px;
+
   line-height: 1em;
-}
-.full-name span {
-  font-weight: 300;
-  font-family: 'Rubik', Sans-Serif;
-
-  font-family: 'Helvetica Neue', sans-serif;
-
-  padding: 0px;
-}
-.profession {
-  font-family: 'Helvetica Neue', sans-serif;
-  height: 30px;
-  margin-bottom: 0;
-  margin-left: 18px;
-  padding: 0 20px;
-  width: fit-content;
-  font-size: 1.2rem;
-  color: #222;
-  background-color: var(--primary-color);
-
-  line-height: 1.5em;
+  letter-spacing: -0.07rem;
 }
 
 .profession:before {
@@ -261,10 +186,11 @@ header {
   border-top: 30px solid var(--primary-color);
   border-right: 1.6em solid transparent;
 }
+
 .profession:after {
   z-index: -2;
 
-  content: '';
+  content: "";
   position: absolute;
   bottom: 28px;
   left: -1%;
@@ -272,6 +198,7 @@ header {
   height: 2px;
   background-color: #0001;
 }
+
 .title {
   position: relative;
 }
@@ -280,52 +207,56 @@ h1,
 h2,
 h3,
 h4 {
-  font-family: 'Helvetica Neue', sans-serif;
+  font-family: "Roobert Bold", sans-serif;
   font-weight: bold;
 }
 
 h2 {
-  font-weight: 600;
-  /* margin-bottom: 20px; */
-  margin-bottom: 10px;
-  letter-spacing: 0.3rem;
+  color: var(--primary-color);
+  font-family: "Roobert Light", sans-serif;
+  letter-spacing: -0.01em;
+
+  text-transform: uppercase;
+  margin-top: 0;
+  margin-bottom: 0.5rem;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 130%;
+  text-decoration: none;
+  letter-spacing: -0.01em;
 }
+
 h3 {
-  font-size: 1.1rem;
+  font-size: 16px;
   font-weight: 600;
   margin-bottom: 5px;
-  letter-spacing: 0.2rem;
+  /* letter-spacing: 0.2rem; */
 }
+
 h4 {
   font-size: 0.8rem;
   font-weight: 600;
   margin-bottom: 5px;
 }
+
 .education section {
   margin-bottom: 1.5rem;
 }
+
 .education section div {
   margin-bottom: 12px;
 }
+
 .education h5 {
   position: relative;
   display: inline-block;
   z-index: 2 !important;
 }
-.education h5:after {
-  z-index: -1 !important;
-  content: '';
-  height: 6px;
-  width: 115%;
-  background-color: var(--primary-color);
-  opacity: 0.5;
-  position: absolute;
-  bottom: 1px;
-  left: -6px;
-}
+
 strong {
   opacity: 0.9;
 }
+
 h6 {
   font-size: 12px;
   opacity: 0.7;
@@ -339,6 +270,7 @@ h6 {
   opacity: 0.7;
   margin-bottom: 4px;
 }
+
 .job-info > * {
   margin: 0;
 }
@@ -352,20 +284,10 @@ hr {
 h3.experience-name {
   position: relative;
   display: inline-block;
-  margin-top: 0px;
-  margin-bottom: 2px;
+
+  margin: 0.6rem 0;
   z-index: 2 !important;
-}
-.experience-name:after {
-  z-index: -1 !important;
-  content: '';
-  height: 8px;
-  width: 115%;
-  background-color: var(--primary-color);
-  opacity: 0.5;
-  position: absolute;
-  bottom: 1px;
-  left: -6px;
+  /* color: var(--primary-color); */
 }
 
 ul {
@@ -373,26 +295,23 @@ ul {
   /* margin-bottom: 40px; */
   margin-bottom: 20px;
 }
+
 p {
-  color: #777;
-  color: #444;
-  font-size: 0.9rem;
+  color: var(--text-color);
+  font-size: 12px;
 }
 
 li {
-  color: #777;
-  color: #444;
+  color: var(--text-color);
 
-  font-size: 0.9rem;
+  font-size: 12px;
   padding-left: 6px;
 }
-.experience li {
-  list-style: '>>';
-}
+
 li strong {
-  font-family: 'Helvetica Neue', sans-serif;
+  font-family: "Roobert Bold", sans-serif;
   font-weight: bold;
-  color: #444;
+  color: var(--text-color);
 }
 
 .project-cta {
@@ -407,24 +326,29 @@ li strong {
 .project-cta a:last-child {
   padding: 0 0.5rem;
 }
+
 .project-cta a:hover .code-expand-icon-show,
 .project-cta a .code-expand-icon-hide {
   display: inline-block;
 }
+
 .project-cta a:hover .code-expand-icon-hide,
 .project-cta a .code-expand-icon-show {
   display: none;
 }
+
 .project-cta span {
   display: flex;
   gap: 0.5rem;
 }
+
 .code-expand-icon-hide,
 .code-expand-icon-show {
   height: 18px;
   opacity: 0.6;
   color: #0001;
 }
+
 footer {
   height: 0px;
 }
@@ -449,42 +373,46 @@ footer {
   padding: 0 15px 0 20px;
   flex: 3.9;
 }
+
 .a4 .content-wrapper .content {
-  border-left: 2px solid #ddd;
   padding: 0 20px;
   flex: 7.5;
 }
+
 .a4 .content-wrapper aside ul {
   margin-bottom: 1.5em;
 }
+
 .a4 .content-wrapper aside ul > ul {
   margin-bottom: 0;
   list-style: disc;
 }
+
 .a4 .content-wrapper aside li {
   margin-bottom: 5px;
 }
-.a4 .content-wrapper aside h2 {
-  margin-bottom: 1rem;
-}
+
 .a4 .content-wrapper aside h3 {
   margin-top: 20px;
 }
+
 .a4 .content-wrapper .content ul:last-child {
   margin-bottom: 0;
 }
 
+.skills {
+  margin-bottom: 4rem;
+}
+
 .skills h2 {
   margin-bottom: 0.2rem;
-}
-.skills h3 {
-  margin-bottom: 1.2rem;
 }
 
 #download svg {
   width: 2em;
   stroke: #666;
 }
+
 #download span {
   color: #666;
 }
@@ -515,6 +443,7 @@ footer {
 .pdf-mode-btn:is(:hover, :focus) {
   color: unset !important;
 }
+
 .pdf-mode-btn {
   white-space: nowrap;
   width: 7.5rem !important;
@@ -525,14 +454,16 @@ footer {
   left: unset !important;
   right: 2rem !important;
   bottom: 2rem !important;
-  transform: unset !important ;
+  transform: unset !important;
   box-shadow: none !important;
 }
+
 .pdf-mode-btn div {
   color: #757575 !important;
   display: inline;
   font-weight: bolder;
 }
+
 .text-primary div {
   color: rgb(0, 143, 232) !important;
 }
@@ -540,6 +471,7 @@ footer {
 section.pdf-mode-contacts {
   display: none;
 }
+
 .cursor-pointer {
   cursor: pointer;
 }
